--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+{% block primary_navigation %}{% endblock %}
 {% block jumbo %}
     <section class="jumbo">
         <h1 class="ir">REFLX Labs</h1>
