Added CES and privacy policy.

--- a/source/index.html
+++ b/source/index.html
@@ -15,6 +15,10 @@ layout: default
     </div>
 
     <p>
+        We'll be at <a title="CES" href="http://www.cesweb.org/">CES 2014</a>. Will you?
+    </p>
+
+    <p>
         Pioneered in Seattle.
     </p>
 
