Added team and updated a few major things for new sculpin goodness.

--- a/source/press.html
+++ b/source/press.html
@@ -1,17 +1,14 @@
 ---
 layout: default
+title: Press
 use:
     - press_releases
 
 ---
 {% block content %}
 
-    <p>
-        Please see our <a href="{{ site.url }}/press/kit/">press kit</a> for additional
-        materials.
-    </p>
+    <h1>Press Releases</h1>
 
-    <strong>Press Releases</strong>
     <ul>
         {% for pr in data.press_releases %}
             <li>
@@ -19,4 +16,10 @@ use:
             </li>
         {% endfor %}
     </ul>
+
+    <p>
+        Please see our <a href="{{ site.url }}/press/kit/">press kit</a> for additional
+        materials.
+    </p>
+
 {% endblock %}
