Fixed some links and some markup; using content-types head branch to bypass .meta ... experimental.

--- a/source/_team/000-jose.html
+++ b/source/_team/000-jose.html
@@ -5,6 +5,7 @@ permalink: team/jose/
 name: Jose Torres
 position: Co-founder and CEO
 twitter: TonyTaj
+linkedin: http://www.linkedin.com/in/josetorresjr
 
 ---
 {% block mini_bio %}
