--- a/source/_team/003-beau.html
+++ b/source/_team/003-beau.html
@@ -5,6 +5,7 @@ permalink: team/beau/
 name: Beau Simensen
 position: Chief Software Architect
 twitter: beausimensen
+linkedin: http://www.linkedin.com/in/simensen/
 github: simensen
 
 ---
