--- a/source/team.html
+++ b/source/team.html
@@ -11,16 +11,16 @@ use:
 {% for bio in data.team %}
 
 <div class="bio col-xs-6 col-md-4 col-lg-3">
-    <a href="{{ bio.url }}" title="{{ bio.meta.name }}"><div class="headshot-wrapper">
-        <div class="headshot"><img src="{{ site.url }}/assets/team/{{ bio.meta.symname }}.png"></div>
+    <a href="{{ bio.url }}" title="{{ bio.name }}"><div class="headshot-wrapper">
+        <div class="headshot"><img src="{{ site.url }}/assets/team/{{ bio.symname }}.png"></div>
     </div></a>
     <div class="details">
-        <a href="{{ bio.url }}" title="{{ bio.meta.name }}"><span class="name">{{ bio.meta.name }}</span></a>
-        <span class="position">{{ bio.meta.position }}</span>
+        <a href="{{ bio.url }}" title="{{ bio.name }}"><span class="name">{{ bio.name }}</span></a>
+        <span class="position">{{ bio.position }}</span>
             <div class="social-media">
-                {% if bio.meta.twitter %}<a href="https://twitter.com/{{ bio.meta.twitter }}"><i class="icon icon-twitter"></i></a>{% endif %}
-                {% if bio.meta.linkedin %}<a href="https://twitter.com/{{ bio.meta.linkedin }}"><i class="icon icon-linkedin"></i></a>{% endif %}
-                {% if bio.meta.github %}<a href="https://twitter.com/{{ bio.meta.github }}"><i class="icon icon-github"></i></a>{% endif %}
+                {% if bio.twitter %}<a href="https://twitter.com/{{ bio.twitter }}"><i class="icon icon-twitter"></i></a>{% endif %}
+                {% if bio.linkedin %}<a href="{{ bio.linkedin }}"><i class="icon icon-linkedin"></i></a>{% endif %}
+                {% if bio.github %}<a href="https://github.com/{{ bio.github }}"><i class="icon icon-github"></i></a>{% endif %}
             </div>
         <div class="info">
             {{ bio.blocks.mini_bio|raw }}
