--- a/source/team.html
+++ b/source/team.html
@@ -12,7 +12,7 @@ use:
 
 <div class="bio col-xs-6 col-md-4 col-lg-3">
     <a href="{{ bio.url }}" title="{{ bio.name }}"><div class="headshot-wrapper">
-        <div class="headshot"><img src="{{ site.url }}/assets/team/{{ bio.symname }}.png"></div>
+        <div class="headshot"><img width="400" height="400" src="{{ site.url }}/assets/team/{{ bio.symname }}.png"></div>
     </div></a>
     <div class="details">
         <a href="{{ bio.url }}" title="{{ bio.name }}"><span class="name">{{ bio.name }}</span></a>
