--- a/source/team.html
+++ b/source/team.html
@@ -24,6 +24,7 @@ use:
             </div>
         <div class="info">
             {{ bio.blocks.mini_bio|raw }}
+            <a href="{{ bio.url }}" class="read-more">read more &raquo;</a>
         </div>
     </div>
 </div>
