linked in fixes.

--- a/source/_team/001-giovanni.html
+++ b/source/_team/001-giovanni.html
@@ -4,6 +4,7 @@ symname: giovanni
 permalink: team/giovanni/
 name: Giovanni Nino
 position: Co-founder and CTO
+linkedin: http://www.linkedin.com/pub/giovanni-nino/66/78a/670
 
 ---
 {% block mini_bio %}
