--- a/source/_team/002-brett.html
+++ b/source/_team/002-brett.html
@@ -4,6 +4,7 @@ symname: brett
 permalink: team/brett/
 name: Brett Canfield
 position: CFO
+linkedin: http://www.linkedin.com/pub/brett-canfield/8/221/4b6
 
 ---
 {% block mini_bio %}
