--- a/source/_team/007-dan.html
+++ b/source/_team/007-dan.html
@@ -5,6 +5,7 @@ permalink: team/dan/
 name: Dan Herda
 position: Assistant Marketing Manager
 twitter: HerdaDan
+linkedin: http://www.linkedin.com/pub/daniel-herda/64/639/a41
 
 ---
 {% block mini_bio %}
