Update Jose answer.

--- a/source/_team/000-jose.html
+++ b/source/_team/000-jose.html
@@ -43,6 +43,6 @@ Jose graduated Cum Laude with a B.F.A. in Design from Cornish College of the Art
 {% endblock %}
 {% block question_application %}
 <p>
-"Boogibots!"
+    "I'm excited to see all the new ways people will use this platform to express themselves. It could be coding awesome apps, self improvement, or just having fun."
 </p>
 {% endblock %}
