--- a/source/press.html
+++ b/source/press.html
@@ -3,23 +3,56 @@ layout: default
 title: Press
 use:
     - press_releases
+assets:
+    reflx:
+        logos:
+            - { url: reflxlabs-color.png, thumb: reflxlabs-color-thumb.png }
+            - { url: reflxlabs-bw.png, thumb: reflxlabs-bw-thumb.png }
+
+    boogio:
+        logos:
+            - { url: boogio-color.png, thumb: boogio-color-thumb.png }
+            - { url: boogio-bw.png, thumb: boogio-bw-thumb.png }
+        marketing_materials:
+            - { url: boogio-concept.jpg, thumb: boogio-concept-thumb.png }
+            - { url: boogio-moves.png, thumb: boogio-moves-thumb.png }
 
 ---
-{% block content %}
+<h1>Press Releases</h1>
 
-    <h1>Press Releases</h1>
+<ul>
+    {% for pr in data.press_releases %}
+        <li>
+            <a title="{{ pr.title }}" href="{{ pr.url }}">{{ pr.title }}</a>
+        </li>
+    {% endfor %}
+</ul>
 
-    <ul>
-        {% for pr in data.press_releases %}
-            <li>
-                <a title="{{ pr.title }}" href="{{ pr.url }}">{{ pr.title }}</a>
-            </li>
-        {% endfor %}
-    </ul>
+<h2>Press Kit</h2>
+<h4>REFLX Labs Logos</h4>
 
-    <p>
-        Please see our <a href="{{ site.url }}/press/kit/">press kit</a> for additional
-        materials.
-    </p>
+<div class="asset-collection">
+    {% for logo in page.assets.reflx.logos %}
+        <div class="asset"><a href="{{ site.url }}/assets/press-kit/{{ logo.url }}"><img src="{{ site.url }}/assets/press-kit/{{ logo.thumb }}"></a></div>
+    {% endfor %}
+</div>
 
-{% endblock %}
+<h4>Boogio Logos</h4>
+<div class="asset-collection">
+    {% for logo in page.assets.boogio.logos %}
+        <div class="asset"><a href="{{ site.url }}/assets/press-kit/{{ logo.url }}"><img src="{{ site.url }}/assets/press-kit/{{ logo.thumb }}"></a></div>
+    {% endfor %}
+</div>
+
+<h4>Boogio Concept Artwork</h4>
+<div class="asset-collection">
+    {% for marketing_material in page.assets.boogio.marketing_materials %}
+        <div class="asset"><a href="{{ site.url }}/assets/press-kit/{{ marketing_material.url }}"><img src="{{ site.url }}/assets/press-kit/{{ marketing_material.thumb }}"></a></div>
+    {% endfor %}
+</div>
+
+<h4>Boogio Media</h4>
+<p>
+    See <a href="http://boogio.com/media/">Boogio's media page</a> for Boogio related videos and other media.
+</p>
+
