--- a/source/_team/001-giovanni.html
+++ b/source/_team/001-giovanni.html
@@ -1,8 +1,8 @@
 ---
-title: Giovanni Nino
+title: Giovanni Nino Ph.D.
 symname: giovanni
 permalink: team/giovanni/
-name: Giovanni Nino
+name: Giovanni Nino Ph.D.
 position: Co-founder and CTO
 linkedin: http://www.linkedin.com/pub/giovanni-nino/66/78a/670
 
