Updated handling of press releases, added a new press release, removed CES.

--- a/source/_team/004-jonathan.html
+++ b/source/_team/004-jonathan.html
@@ -32,6 +32,6 @@ linkedin: http://www.linkedin.com/in/jonathanchicquette/
 {% endblock %}
 {% block question_application %}
 <p>
-    "I'd like to see Boogio to create a metric that combines heart rate, speed of movement to help each individual learn how to maintain healthy daily activity."
+    "I'd like to see Boogio standardize a combined metric for heart rate and speed of movement. That would be extremely helpful information for individuals who want to measure, improve, and maintain healthful daily activities."
 </p>
 {% endblock %}
