Added Google Plus

--- a/source/index.html
+++ b/source/index.html
@@ -22,6 +22,7 @@ use:
     <div class="social-media">
         <ul class="nav nav-pills">
             <li><a title="@reflxlabs" href="https://twitter.com/reflxlabs"><i class="icon icon-twitter"></i></a></li>
+            <li><a title="REFLX Labs on Google+" rel="publisher" href="https://plus.google.com/114921977629548572373"><i class="icon icon-google-plus"></i></a></li>
             <li><a title="@reflxlabs" href="http://www.linkedin.com/company/reflx-labs-inc-"><i class="icon icon-linkedin"></i></a></li>
         </ul>
     </div>
